# delivery-app

./: Readme.md  docker-compose.yaml
api-gateway/: .pre-commit-config.yaml  Dockerfile  app.py  pyproject.toml
api-service/: Dockerfile  package-lock.json  package.json  populate.js  server.js
api-service/models/: model.js
frontend/: Dockerfile  Readme.md  package-lock.json  package.json
frontend/src/: App.js
postman/: api_service.postman_collection.json
