[tool.poetry]
authors = ["René Filip"]
description = "Python API Gateway"
license = "MIT"
name = "API Gateway"
version = "0.0.1"

[tool.poetry.dependencies]
Flask = "^2.1.2"
python = "^3.9"
redis = "^4.3.3"
Flask-Limiter = {extras = ["redis"], version = "^2.4.6"}
requests = "^2.28.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
pytest = "^7.1.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
